fix(pmi-infographic): double scroll mobile

--- a/projects/fe-pmi-infographic/src/scss/layout/_general.scss
+++ b/projects/fe-pmi-infographic/src/scss/layout/_general.scss
@@ -68,14 +68,15 @@ sup {
 }
 
 //layout
-html,
 body {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   overscroll-behavior: none;
   overflow-x: hidden;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+  display: flex;
+  flex-direction: column;
 }
 
 .wrapper {
